src/scss/components/_stagedList.scss
@use '../abstracts/' as abstract;

@mixin stagedList {
  border-radius: 5px;
  overflow-y: scroll;
  border: 1px solid #bdbdbd;
  border-radius: 5px;
  background-color: #eae8fe;
  padding: 8px 8px 8px 12px;

  li {
    border-radius: 5px;
    background-color: #fff;

    + li {
      margin-top: 6px;
    }
  }

  .img-item {
    float: left;
    width: 18px;
    height: 32px;
  }

  .txt-item {
    float: left;
    margin-left: 10px;
    line-height: 32px;
    font-size: 9px;
  }

  .num-counter {
    float: right;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 30px;
    height: 30px;
    border: 1px solid #bdbdbd;
    border-radius: 5px;
  }

  .btn-staged {
    position: relative;
    width: 100%;
    padding: 8px;
  }

  .btn-unstaged {
    position: absolute;
    top: -4px;
    right: -4px;
    cursor: pointer;
  }

  .fa-circle-minus {
    font-size: 20px;
  }

  // For Window OS users, scrollbar style setting
  border-top: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid transparent;

  // Scrollbar style
  ::-webkit-scrollbar {
    width: 4px;
  }
  ::-webkit-scrollbar-button {
    width: 0;
    height: 0;
  }
  ::-webkit-scrollbar-thumb {
    border-radius: 50px;
    background: #fff;
  }
  ::-webkit-scrollbar-track {
    background: transparent;
  }

  @content;
}

